--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,17 @@ body {
   transition: background-color 0.2s;
 }
 
+.back-btn{
+  margin-top: 10px;
+  /* width: 100%; */
+  padding: 10px;
+  background-color: #3498db;
+  border: none;
+  border-radius: 0.25rem;
+  transition: background-color 0.2s;
+  color: white;
+}
+
 .btn-primary:hover {
   background-color: #2980b9;
 }
